Mobile dark mode fix.

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,13 @@
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  html, body {
+    @apply: bg-white text-black;
+  }
+}
+
+
 .card {
   padding: 2em;
 }
